# Card_reader

./: .gitignore  README.md  pyproject.toml
card_reader/: business_cards.json  card_reader_ui.py  ocr_processor.py
card_reader/utils/: _version.py  aws_helper.py  config_helper.py  constants.py  exif_handler.py  helper.py  messages.py  model_manager.py  module_guard.py  optional_check.py  path_helper.py  profanity.py  shimmer_tile.py  time_middleware.py  timing.py
