[project]
name = "card-reader"
version = "0.1.0"
description = ""
authors = [
    {name = "Poornachandra.A.N",email = "poornachandra308@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "streamlit (>=1.50.0,<2.0.0)",
    "easyocr (>=1.7.2,<2.0.0)",
    "numpy (>=2.3.4,<3.0.0)",
    "google-genai (>=1.46.0,<2.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "boto3 (>=1.40.58,<2.0.0)",
    "werkzeug (>=3.1.3,<4.0.0)"
]



[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

